fixed layout gap

--- a/docs/style/style.styl
+++ b/docs/style/style.styl
@@ -67,7 +67,7 @@ html
 			#content
 				max-width 768px
 				padding 0 2em
-				margin 1em auto
+				margin 0 auto
 
 			#tab-layout
 				display flex
